--- a/index.html
+++ b/index.html
@@ -10,8 +10,42 @@
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header></header>
-    <main></main>
-    <footer></footer>
+    <header class = "header"></header>
+        <div class = "container"></div>
+        <nav class="nav">
+            <ul class="nav-list">
+              <li class="nav-item"><a href="#profile" class="nav-link">Profile</a></li>
+              <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+              <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+              <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+              <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+              <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
+              <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+              <li class="nav-item"><a href="#languages" class="nav-link">Education</a></li>
+              <li class="nav-item"><a href="#skills" class="nav-link">Languages</a></li>
+            </ul>
+          </nav>
+    <main class = "main"></main>
+        <div class = "container"></div>
+        <section class="section" id="profile"></section>
+            <h1 class="section-title">Profile</h1>
+        <section class="section" id="summary"></section>
+            <h1 class="section-title">Summary</h1>
+        <section class="section" id="contacts"></section>
+            <h2 class="section-title">Contacts</h2>
+        <section class="section" id="skills"></section>
+            <h2 class="section-title">Skills</h2>
+        <section class="section" id="code"></section>
+            <h2 class="section-title">Code</h2>
+        <section class="section" id="courses"></section>
+            <h2 class="section-title">Courses</h2>
+        <section class="section" id="projects"></section>
+            <h2 class="section-title">Projects</h2>
+        <section class="section" id="education"></section>
+            <h2 class="section-title">Education</h2>
+        <section class="section" id="languages"></section>
+            <h2 class="section-title">Languages</h2>
+    <footer class = "footer"></footer>
+        <div class = "container"></div>
 </body>
 </html>
