feat: add information to CV

--- a/index.html
+++ b/index.html
@@ -11,40 +11,82 @@
 </head>
 <body>
     <header class = "header"></header>
-        <div class = "container"></div>
-        <nav class="nav">
-            <ul class="nav-list">
-              <li class="nav-item"><a href="#profile" class="nav-link">Profile</a></li>
-              <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
-              <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
-              <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
-              <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
-              <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
-              <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
-              <li class="nav-item"><a href="#languages" class="nav-link">Education</a></li>
-              <li class="nav-item"><a href="#skills" class="nav-link">Languages</a></li>
-            </ul>
-          </nav>
-    <main class = "main"></main>
-        <div class = "container"></div>
-        <section class="section" id="profile"></section>
-            <h1 class="section-title">Profile</h1>
-        <section class="section" id="summary"></section>
-            <h1 class="section-title">Summary</h1>
-        <section class="section" id="contacts"></section>
-            <h2 class="section-title">Contacts</h2>
-        <section class="section" id="skills"></section>
-            <h2 class="section-title">Skills</h2>
-        <section class="section" id="code"></section>
-            <h2 class="section-title">Code</h2>
-        <section class="section" id="courses"></section>
-            <h2 class="section-title">Courses</h2>
-        <section class="section" id="projects"></section>
-            <h2 class="section-title">Projects</h2>
-        <section class="section" id="education"></section>
-            <h2 class="section-title">Education</h2>
-        <section class="section" id="languages"></section>
-            <h2 class="section-title">Languages</h2>
+        <div class = "container">
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li class="nav-item"><a href="#profile" class="nav-link">Profile</a></li>
+                    <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+                    <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
+                    <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
+                    <li class="nav-item"><a href="#courses" class="nav-link">Courses</a></li>
+                    <li class="nav-item"><a href="#projects" class="nav-link">Projects</a></li>
+                    <li class="nav-item"><a href="#languages" class="nav-link">Education</a></li>
+                    <li class="nav-item"><a href="#skills" class="nav-link">Languages</a></li>
+                </ul>
+            </nav>
+        </div>
+    <main class = "main">
+        <div class = "container" class="main-container">
+            <section class="section" id="profile">
+                <h1 class="section-title">Profile</h1>
+                <img src="./assets/img/avatar.jpg" alt="avatar" width="320" height="240">
+            </section>
+            <section class="section" id="summary">
+                <h1 class="section-title">Summary</h1>
+            </section>
+            <section class="section" id="contacts">
+                <h2 class="section-title">Contacts</h2>
+                <ul>
+                    <li>Mobile: +375292599889</li>
+                    <li>Email: v.matskevich93@gmail.com</li>
+                    <li>Telegram: @VMatskevich</li>
+                    <li>LinkedIn: <a href="https://www.linkedin.com/in/vmatskevich/">Valery Matskevich</a></li>
+                    <li>Discord: Matskevich</li>
+                    <li>GitHub:<a href="https://github.com/ValeryMatskevich">Valery Matskevich</a></li>
+                </ul>
+            </section>
+            <section class="section" id="skills">
+                <h2 class="section-title">Skills</h2>
+                <ul>
+                    <li>Knowledge of levels, methods and types of testing;</li>
+                    <li>Knowledge of testing methodologies and software development life cycles;</li>
+                    <li>Analysis and testing of application requirements;</li>
+                    <li>Perform manual testing of the web and desktop applications;</a></li>
+                    <li>Competency in Atlassian software development and collaboration tool: Jira;</li>
+                    <li>Experience with traffic tools: Fiddler, Charles;</li>
+                    <li>Experience with SQL;</li>
+                    <li>Dev Tools: Firefox, Google Chrome, etc.;</li>
+                    <li>Working with operating systems: Windows, Linux;</li>
+                    <li>Experience with virtualization: VirtualBox;</li>
+                    <li>Basic knowledge of programming language: Python;</li>
+                    <li>Basic knowledge of Postman.</li>
+                </ul>
+            </section>
+            <section class="section" id="code">
+                <h2 class="section-title">Code</h2>
+            </section>
+            <section class="section" id="courses">
+                <h2 class="section-title">Courses</h2>
+                <ul>
+                    <li>Python programming - <a href="https://stepik.org/cert/1794440/">Certificate</li>
+                    <li>Software Testing: Postman for API testing - <a href="https://stepik.org/cert/1827438/">Certificate</a></li>
+                </ul>
+            </section>
+            <section class="section" id="projects">
+                <h2 class="section-title">Projects</h2>
+            </section>
+            <section class="section" id="education">
+                <h2 class="section-title">Education</h2>
+                <p>Academy of Public Administration under the Aegis of the President of the Republic of Belarus, 09/2010 – 06/2015<br>
+                Lawyer
+                </p>
+            </section>
+            <section class="section" id="languages">
+                <h2 class="section-title">Languages</h2>
+            </section>
+        </div>
+    </main>
     <footer class = "footer"></footer>
         <div class = "container"></div>
 </body>
