--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <nav class="nav">
                 <ul class="nav-list">
                     <li class="nav-item"><a href="#profile" class="nav-link">Profile</a></li>
-                    <li class="nav-item"><a href="#summary" class="nav-link">Summary</a></li>
+                    <li class="nav-item"><a href="#about_me" class="nav-link">About</a></li>
                     <li class="nav-item"><a href="#contacts" class="nav-link">Contacts</a></li>
                     <li class="nav-item"><a href="#skills" class="nav-link">Skills</a></li>
                     <li class="nav-item"><a href="#code" class="nav-link">Code</a></li>
@@ -32,7 +32,7 @@
                 <h1 class="section-title">Profile</h1>
                 <img src="./assets/img/avatar.jpg" alt="avatar" width="320" height="240">
             </section>
-            <section class="section" id="about me">
+            <section class="section" id="about_me">
                 <h2 class="section-title">About me</h2>
                 <p>I am a prospective QA engineer with extensive background in law. I am a strong believer that constant curiosity and having a “Can Do!” attitude are the ones that help me to move forward and be a strong member of any team. Currently, I am open to opportunities and become a strong asset in your company. One of my goal is to enhance my skills in manual QA testing and in the future, I would like to do test automation.</p>
             </section>
@@ -53,7 +53,7 @@
                     <li>Knowledge of levels, methods and types of testing;</li>
                     <li>Knowledge of testing methodologies and software development life cycles;</li>
                     <li>Analysis and testing of application requirements;</li>
-                    <li>Perform manual testing of the web and desktop applications;</a></li>
+                    <li>Perform manual testing of the web and desktop applications;</li>
                     <li>Competency in Atlassian software development and collaboration tool: Jira;</li>
                     <li>Experience with traffic tools: Fiddler, Charles;</li>
                     <li>Experience with SQL;</li>
@@ -66,7 +66,7 @@
             </section>
             <section class="section" id="code">
                 <h2 class="section-title">Code</h2>
-                <pre><code Python>
+                <pre><code>
                     Python
                     Slovar = set(input().lower() for i in range(int(input())))
                     D = [input().lower().split() for j in range(int(input()))]
@@ -88,6 +88,7 @@
             </section>
             <section class="section" id="projects">
                 <h2 class="section-title">Projects</h2>
+                <a href="https://ValeryMatskevich.github.io/rsschool-cv/">My project: CV</a>
             </section>
             <section class="section" id="education">
                 <h2 class="section-title">Education</h2>
@@ -105,6 +106,9 @@
         </div>
     </main>
     <footer class = "footer"></footer>
+    <a href="https://github.com/ValeryMatskevich">GitHub: Valery Matskevich</a>
+    <p>Date of creation: 2022</p>
+    <a href="https://rs.school/js/"><img src="./assets/svg/rs_school_js.svg" alt="rs_school_logo" width="80" height="60"></a>
         <div class = "container"></div>
 </body>
 </html>
