--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </nav>
         </div>
     <main class = "main">
-        <div class = "container" class="main-container">
+        <div class = "container">
             <section class="section" id="profile">
                 <h1 class="section-title">Profile</h1>
                 <img src="./assets/img/avatar.jpg" alt="avatar" width="320" height="240">
