--- a/index.html
+++ b/index.html
@@ -105,10 +105,12 @@
             </section>
         </div>
     </main>
-    <footer class = "footer"></footer>
-    <a href="https://github.com/ValeryMatskevich">GitHub: Valery Matskevich</a>
-    <p>Date of creation: 2022</p>
-    <a href="https://rs.school/js/"><img src="./assets/svg/rs_school_js.svg" alt="rs_school_logo" width="80" height="60"></a>
-        <div class = "container"></div>
+    <footer class = "footer">
+        <div class = "container">
+            <a href="https://github.com/ValeryMatskevich">GitHub: Valery Matskevich</a>
+            <p>Date of creation: 2022</p>
+            <a href="https://rs.school/js/"><img src="./assets/svg/rs_school_js.svg" alt="rs_school_logo" width="80" height="60"></a>
+        </div>
+    </footer>
 </body>
 </html>
